tests/snapshots/latex__latex15.snap
---
source: tests/latex.rs
expression: "run(\"((A → B) → A) → A\")"

---
\documentclass[a4paper,twoside=false,DIV=16]{scrartcl}
\usepackage{bussproofs}
\usepackage{colortbl}
\usepackage{varwidth}
\usepackage{pifont}
\usepackage{xcolor}
\usepackage{listings}
\usepackage{xpatch}
\usepackage{tikz}

\usetikzlibrary{graphs}
\usetikzlibrary{graphdrawing}
\usetikzlibrary{decorations.pathmorphing}
\usegdlibrary{layered}

\newcommand{\cmark}{\textcolor{blue}{\ding{52}}}%
\newcommand{\xmark}{\textcolor{red}{\ding{56}}}%

\lstset{%
  basicstyle={\small},%
  identifierstyle={\small},%
  commentstyle={\small\itshape},%
  keywordstyle={\small\bfseries},%
  ndkeywordstyle={\small},%
  stringstyle={\small\ttfamily},
  frame={tb},
  breaklines=true,
  columns=[l]{fullflexible},%
  numbers=left,%
  xrightmargin=0em,%
  xleftmargin=3em,%
  numberstyle={\scriptsize},%
  stepnumber=1,
  numbersep=1em,%
  lineskip=-0.5ex%
}

\title{Logic solver result}

\makeatletter
% remove author, date, publishers
\xpatchcmd{\@maketitle}
  {%
    {%
      \usekomafont{author}{%
        \lineskip .5em%
        \begin{tabular}[t]{c}
          \@author
        \end{tabular}\par
      }%
    }%
    \vskip 1em%
    {\usekomafont{date}{\@date \par}}%
    \vskip \z@ \@plus 1em
    {\usekomafont{publishers}{\@publishers \par}}%
  }
  {}{}{\PatchFailed}
\makeatother

\begin{document}

\maketitle


\begin{center}
\begin{tabular}{|c|c|}
  \hline
  \cellcolor[gray]{0.8}
  \begin{minipage}{5cm}
    \centering
    Classical Logic
  \end{minipage}
  &
  \cellcolor[gray]{0.8}
  \begin{minipage}{5cm}
    \centering
    Intuitionistic Logic
  \end{minipage}
  \\\hline

  {
    \huge
    \cmark
    Provable
  }
  &
  {
    \huge
    \xmark
    Not provable
  }
  \\\hline
\end{tabular}
\end{center}

\section*{Input}

$((A \to B) \to A) \to A$

\section*{Proof (classical logic)}

The proposition is provable in classical logic. Below is one such proof diagram.


\begin{prooftree}
\AxiomC{$[\lnot A]_{2}$}
\AxiomC{$[(A \to B) \to A]_{1}$}
\AxiomC{$[\lnot A]_{2}$}
\AxiomC{$[A]_{3}$}
\RightLabel{\scriptsize${\to}_E$}
\BinaryInfC{$\bot$}
\RightLabel{\scriptsize${\bot}_E (4)$}
\UnaryInfC{$B$}
\RightLabel{\scriptsize${\to}_I (3)$}
\UnaryInfC{$A \to B$}
\RightLabel{\scriptsize${\to}_E$}
\BinaryInfC{$A$}
\RightLabel{\scriptsize${\to}_E$}
\BinaryInfC{$\bot$}
\RightLabel{\scriptsize${\to}_I (2)$}
\UnaryInfC{$\lnot \lnot A$}
\RightLabel{\scriptsize$\lnot\lnot_E$}
\UnaryInfC{$A$}
\RightLabel{\scriptsize${\to}_I (1)$}
\UnaryInfC{$((A \to B) \to A) \to A$}
\end{prooftree}
\section*{Refutation (intuitionistic logic)}

The proposition isn't provable in intuitionistic logic.

You can confirm non-provability via the following refutation in Kripke semantics.

\begin{tikzpicture}[layered layout, level distance=2cm, sibling distance=2cm, nodes={{circle, draw}}, acc/.style={{decorate,decoration=snake}}]
\node (w0) {$W_0$};
\node (w1) {$W_1$};
\draw (w0) edge[->,acc] (w1);
\end{tikzpicture}

\begin{tabular}{r|cc}
& $W_0$& $W_1$
\\\hline\hline
A & 0 & 1
\\
B & 0 & 0
\\
A \to B & 0 & 0
\\
(A \to B) \to A & 1 & 1
\\
((A \to B) \to A) \to A & 0 & 1
\end{tabular}

\end{document}
